--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<body lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,44 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 
+<header>
+
+    <div class="header">
+        <h1 alt="Devon's Portfolio">Devon's Portfolio</h1>
+
+</header>
+
 
 <body>
+
+    <section>
+    <h2 id="workhead">Work</h2>
+    </section>
+    <main>
+
+   
+
+        <section class="work">
+            <img class="workexamp" src="placeholder.png">
+            <img class="workexamp" src="placeholder.png">
+            <img class="workexamp" src="placeholder.png">
+            <img class="workexamp" src="placeholder.png">
+        </section>
+
+
     
+
+    </main>
+
 </body>
+<foot>
+    <h2 id="contact">Contact Me</h2>
+</foot>
+<footer>
+    <h3>555-555-5555 devkuh99@gmail.com</h3>
+</footer>
+
+
 
 
 </html>
